--- a/.travis.yml
+++ b/.travis.yml
@@ -81,5 +81,6 @@ jobs:
           services: docker
           before_install:
               - docker pull ubuntu:disco-20181220
+              - docker build -t iwyu - <Dockerfile.iwyu
           script:
-              - docker run -v $PWD:/hlwm:ro ubuntu:disco-20181220 bash -c 'apt-get update && apt-get -y install cmake iwyu && cd /hlwm && ./iwyu.sh'
+              - docker run -v $PWD:/hlwm:ro iwyu bash -c 'cd /hlwm && ./iwyu.sh'
