--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ language: python
 install:
     - sudo apt-get -y -q update
     - sudo apt-get -y -q build-dep herbstluftwm
-    - sudo apt-get -y -q install cmake ninja-build
-    - sudo apt-get -y -q install dzen2
+    - sudo apt-get -y -q install cmake ninja-build dzen2 xdotool
 
 jobs:
     include:
