Extract keybind commands into new KeyManager

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -38,7 +38,8 @@ target_sources(herbstluftwm PRIVATE
     hookmanager.cpp hookmanager.h
     ipc-protocol.h
     ipc-server.cpp ipc-server.h
-    key.cpp	key.h
+    key.cpp key.h
+    keymanager.cpp keymanager.h
     layout.cpp layout.h
     monitor.cpp monitor.h
     monitormanager.cpp monitormanager.h
