FrameTree class for global actions on the entire tree (#314)
* Add FrameTree class for frame commands & actions

* Dummy-use layout_string

* Dummy-use members of FrameTree

* Move HSFrame::dump to FrameTree::dump

* Move HSFrame::lookup to FrameTree::lookup

* HSFrame::switchcase: make base case first argument

* Move HSFrame::getFocusedFrame to FrameTree

The new FrameTree::focusedFrame(frame) is static and focusedFrame()
applies to the root of the given FrameTree.

* Add tests for dump

* Implement FrameTree::dump without switchcase

* Remove insertClient() from HSFrame

* Delete old function declarations from layout.h

* Add whitespace

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ target_sources(herbstluftwm PRIVATE
     ewmh.cpp ewmh.h
     floating.cpp floating.h
     framedecoration.cpp framedecoration.h
+    frametree.h frametree.cpp
     hookmanager.cpp hookmanager.h
     ipc-protocol.h
     ipc-server.cpp ipc-server.h
