--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ jobs:
                       - xterm
                       - tox
           script:
-              - cmake -G'Ninja' -DCMAKE_BUILD_TYPE=Debug' . # run tests with sanitizer
+              - cmake -G'Ninja' -DCMAKE_BUILD_TYPE=Debug . # run tests with sanitizer
               - ninja -v -k 10
               - tox -- -n auto -v
 
