Try building in Docker

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,83 +9,8 @@ jobs:
     include:
         - name: "Ubuntu 16.04, gcc-8, Debug build, run tests"
           dist: xenial
-          python: "3.6"
-          before_install:
-              - ./ci-check-using-std.sh
-              - export CC=gcc-8 CXX=g++-8
-              - linkerfix="-fuse-ld=gold" # needed to avoid linker error
-              - export LDFLAGS="$linkerfix" LDXXFLAGS="$linkerfix"
-          addons:
-              apt:
-                  sources:
-                      - ubuntu-toolchain-r-test
-                  packages:
-                      - g++-8
-                      - xterm
-                      - tox
-          script:
-              - cmake -G'Ninja' -DCMAKE_BUILD_TYPE=Debug . # run tests with sanitizer
-              - ninja -v -k 10
-              - tox -- -n auto -v
-
-        - name: "Ubuntu 16.04, gcc-7"
-          dist: xenial
-          before_install:
-              - export CC=gcc-7 CXX=g++-7
-          addons:
-              apt:
-                  sources:
-                      - ubuntu-toolchain-r-test
-                  packages:
-                      - g++-7
-          services:
-            - xvfb
-          script:
-            - cmake -G'Ninja' -DCMAKE_INSTALL_PREFIX=/usr .
-            - sudo ninja -v -k 10 install
-            - herbstluftwm &
-            - sleep 1
-            - herbstclient version
-            - herbstclient quit
-            - wait
-
-        - name: "Ubuntu 16.04, clang-7, Debug build"
-          dist: xenial
-          before_install:
-              - export CC=clang-7 CXX=clang++-7
-          addons:
-              apt:
-                  sources:
-                      - llvm-toolchain-xenial-7
-                  packages:
-                      - clang-7
-          script:
-              - cmake -G'Ninja' -DCMAKE_BUILD_TYPE=Debug .
-              - ninja -v -k 10
-
-        - name: "Ubuntu 14.04, gcc-4.8"
-          # Note: Travis provides a newer GCC on trusty (5.4), but gcc-4.8 is
-          # the version provided by Ubuntu, so we use that one.
-          dist: trusty
-          before_install:
-            - export CC=gcc-4.8 CXX=g++-4.8
-          script:
-            - export DISPLAY=:99.0
-            - sh -e /etc/init.d/xvfb start
-            - cmake -G'Ninja' -DCMAKE_INSTALL_PREFIX=/usr .
-            - sudo ninja -v -k 10 install
-            - herbstluftwm &
-            - hlwmpid=$!
-            - sleep 1
-            - herbstclient version
-            - herbstclient quit
-            - wait $hlwmpid
-
-        - name: "include-what-you-use"
-          dist: xenial
           services: docker
           before_install:
-              # Installing IWYU in a container to get the most recent version:
-              - docker build -t iwyu - <Dockerfile.iwyu
+              - docker build -t dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
           script:
-              - docker run --rm -v $PWD:/hlwm:ro iwyu bash -c 'cd /hlwm && ./iwyu.sh'
+              - docker run --rm -v $PWD:/hlwm:ro dnnr/hlwm-ci:disco bash -c 'cd /hlwm && ./ci-check-using-std.sh && export CC=gcc-8 CXX=g++-8 && linkerfix="-fuse-ld=gold" && export LDFLAGS="$linkerfix" LDXXFLAGS="$linkerfix" && cmake -GNinja -DCMAKE_BUILD_TYPE=Debug . && ninja -v -k 10 && tox -- -n auto -v'
