--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ jobs:
           dist: xenial
           services: docker
           before_install:
-              - docker build -t dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
+              - docker pull dnnr/hlwm-ci:disco
+              - docker build -t tmp --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
           script:
-              - docker run --rm -v $PWD:/hlwm:ro dnnr/hlwm-ci:disco bash -c 'cd /hlwm && ./ci-check-using-std.sh && export CC=gcc-8 CXX=g++-8 && linkerfix="-fuse-ld=gold" && export LDFLAGS="$linkerfix" LDXXFLAGS="$linkerfix" && cmake -GNinja -DCMAKE_BUILD_TYPE=Debug . && ninja -v -k 10 && tox -- -n auto -v'
+              - docker run --rm -v $PWD:/hlwm:ro tmp bash -c 'cd /hlwm && ./ci-check-using-std.sh && export CC=gcc-8 CXX=g++-8 && linkerfix="-fuse-ld=gold" && export LDFLAGS="$linkerfix" LDXXFLAGS="$linkerfix" && cmake -GNinja -DCMAKE_BUILD_TYPE=Debug . && ninja -v -k 10 && tox -- -n auto -v'
