--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ jobs:
               - docker pull dnnr/hlwm-ci:disco
               - docker build -t tmp --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
           script:
-              - docker run --rm -v $PWD:/hlwm:rw tmp /hlwm/ci-build.sh
+              - docker run --rm --volume=$PWD:/hlwm:rw tmp /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --run-tests
