--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ jobs:
           services: docker
           before_install:
               - docker pull dnnr/hlwm-ci:disco
-              - docker build -t tmp --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
+              - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
           script:
-              - docker run --rm --volume=$PWD:/hlwm:rw tmp /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --run-tests
+              - docker run -u $UID --privileged -ti --rm --volume=$PWD:/hlwm:rw disco /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --run-tests
