--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,21 @@ jobs:
               - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
           script:
               - docker run -u $UID --privileged -ti --rm --volume=$PWD:/hlwm:rw disco /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --run-tests
+
+        - name: "Ubuntu 19.04, clang-7, Debug build"
+          dist: xenial
+          services: docker
+          before_install:
+              - docker pull dnnr/hlwm-ci:disco
+              - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
+          script:
+              - docker run -u $UID -ti --rm --volume=$PWD:/hlwm:rw disco /hlwm/ci-build.py --check-using-std --cxx=clang++-7 --cc=clang-7 --build-type=Debug
+
+        - name: "Ubuntu 14.04, gcc-4.8, Release build"
+          dist: xenial
+          services: docker
+          before_install:
+              - docker pull dnnr/hlwm-ci:trusty
+              - docker build -t trusty --cache-from dnnr/hlwm-ci:trusty - <Dockerfile.ci-trusty
+          script:
+              - docker run -u $UID -ti --rm --volume=$PWD:/hlwm:rw trusty /hlwm/ci-build.py --check-using-std --cxx=g++-4.8 --cc=gcc-4.8 --build-type=Release
