--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ jobs:
               - docker pull dnnr/hlwm-ci:disco
               - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
           script:
-              - docker run -u $UID -t --rm --volume=$PWD:/hlwm:rw disco /hlwm/ci-build.py --check-using-std --cxx=clang++-7 --cc=clang-7 --build-type=Debug
+              - docker run -u $UID -t --rm --volume=$PWD:/hlwm:rw disco /hlwm/ci-build.py --cxx=clang++-7 --cc=clang-7 --build-type=Debug
 
         - name: "Ubuntu 14.04, gcc-4.8, Release build"
           dist: xenial
@@ -27,4 +27,4 @@ jobs:
               - docker pull dnnr/hlwm-ci:trusty
               - docker build -t trusty --cache-from dnnr/hlwm-ci:trusty - <Dockerfile.ci-trusty
           script:
-              - docker run -u $UID -t --rm --volume=$PWD:/hlwm:rw trusty /hlwm/ci-build.py --check-using-std --cxx=g++-4.8 --cc=gcc-4.8 --build-type=Release
+              - docker run -u $UID -t --rm --volume=$PWD:/hlwm:rw trusty /hlwm/ci-build.py --cxx=g++-4.8 --cc=gcc-4.8 --build-type=Release
