Disable other jobs with "exclude"

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ jobs:
           script:
               - docker run -u $UID --privileged -t --rm --volume=$PWD:/hlwm:rw --volume=$HOME/.ccache:/.ccache:rw disco /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --run-tests --ccache
 
+    exclude:
         - name: "Ubuntu 19.04, clang-7, Debug build"
           dist: xenial
           services: docker
