Try splitting docker run command

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,11 @@ jobs:
               - ccache -s
               - docker pull dnnr/hlwm-ci:disco
               - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
-              - docker run -u $UID --privileged -t --rm --volume=$PWD:/hlwm:rw --volume=$HOME/.ccache:/.ccache:rw disco /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --ccache
+              - docker run -u $UID --privileged -t --rm
+                --volume=$PWD:/hlwm:rw
+                --volume=$HOME/.ccache:/.ccache:rw
+                disco
+                /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --ccache
               - ccache -s
 
     exclude:
