--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,10 @@ jobs:
           script:
               - docker pull dnnr/hlwm-ci:disco
               - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
-              - docker run -u $UID -t --rm --volume=$PWD:/hlwm:rw disco /hlwm/ci-build.py --cxx=clang++-7 --cc=clang-7 --build-type=Debug
+              - docker run -u $UID -t --rm
+                --volume=$PWD:/hlwm:rw
+                disco
+                /hlwm/ci-build.py --cxx=clang++-7 --cc=clang-7 --build-type=Debug
 
         - name: "Ubuntu 14.04, gcc-4.8, Release build"
           dist: xenial
