Dump and mount global .ccache.conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,12 +8,14 @@ jobs:
           dist: xenial
           services: docker
           script:
+              - cat /etc/ccache.conf
               - ccache -s
               - docker pull dnnr/hlwm-ci:disco
               - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
               - docker run -u $UID --privileged -t --rm
                 --volume=$PWD:/hlwm:rw
                 --volume=$HOME/.ccache:/.ccache:rw
+                --volume=/etc/ccache.conf:/etc/ccache.conf:ro
                 disco
                 /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --ccache
               - ccache -s
