Try manual cache directory

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: minimal
 
-cache: ccache
+cache:
+    directories:
+        - $HOME/.ccache
 
 jobs:
     include:
@@ -16,7 +18,6 @@ jobs:
               - docker run -u $UID --privileged -t --rm
                 --volume=$PWD:/hlwm:rw
                 --volume=$HOME/.ccache:/.ccache:rw
-                --volume=/usr/bin/ccache:/usr/bin/ccache:ro
                 disco
                 /hlwm/ci-build.py --check-using-std --cxx=g++-8 --cc=gcc-8 --build-type=Debug --ccache
               - ccache -s
