--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ jobs:
           dist: xenial
           services: docker
           script:
-              # Prepare Docker image
+              # Prepare Docker image with bleeding edge Ubuntu 19.04 (disco)
               - docker pull dnnr/hlwm-ci:disco
               - docker build -t disco --cache-from dnnr/hlwm-ci:disco - <Dockerfile.ci-disco
 
@@ -38,11 +38,11 @@ jobs:
           dist: xenial
           services: docker
           script:
-              # Prepare Docker image
+              # Prepare Docker image with Ubuntu 14.04 (trusty)
               - docker pull dnnr/hlwm-ci:trusty
               - docker build -t trusty --cache-from dnnr/hlwm-ci:trusty - <Dockerfile.ci-trusty
 
-              # Build with gcc-4.8 (plain bash one-liner)
+              # Build with gcc-4.8 (plain bash one-liner because Python is too old)
               - docker run -u $UID -t --rm
                 --volume=$PWD:/hlwm:rw
                 --volume=$HOME/.ccache-gcc-4.8:$HOME/.ccache:rw
